modal hover effect

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 
 
-
 body{
     position: absolute;
     top: 0;
@@ -143,6 +142,11 @@ bg0 div  {
 .modal-content {
     background-color: #d5d5d5;
     color: #4d4d4d;
+}
+
+.mdl:hover {
+    opacity: .5;
+    cursor: pointer;
 }
 
 
